# audio-processor

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: tests.yaml
audio_transformers/cli/: base_handler.py  config.py  datasets.py  errors.py  handler.py  logconfig.py  root_handler.py  transform.py  transform_handler.py
audio_transformers/cli/datasets/: handler.py  public.py
audio_transformers/cli/handlers/: datasets.py  root.py  transform.py
audio_transformers/cli/task/: errors.py  executor.py  initializers.py  model.py
audio_transformers/config/: initializers.py  model.py  reader.py
audio_transformers/core/: band_pass.py  band_stop.py  composite.py  gaussian_noise.py  high_pass.py  inversion.py  low_pass.py  model.py  one_side_filter.py  pitch_shift.py  speed_perturbation.py  transform.py  two_side_filter.py
audio_transformers/datasets/: public.py
audio_transformers/io/: file.py  format.py  probe.py
audio_transformers/task/: executor.py  initializers.py
audio_transformers/utils/: archives.py  console.py  docs.py  types.py  urls.py
tests/: test_basic.py  test_datasets.py  test_gaussian_noise.py  test_high_pass.py  test_inversion.py  test_low_pass.py  test_pitch_shift.py  test_speed_perturbation.py  test_transform.py  test_two_side_filter.py  utils.py
