[tool.poetry]
name = "audio-transformers"
version = "0.0.1"
description = ""
authors = ["Stepan Anokhin <stepan.anokhin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
scipy = "^1.14.0"
ffmpegio = "^0.10.0.post0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
